--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,14 @@
 {
   "editor.formatOnSave": true,
+
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": {
-  "source.removeUnusedImports": "explicit"
-    //   "source.fixAll.eslint": "always"
-  }
+
+  "[javascript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[javascriptreact]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[typescript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[typescriptreact]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+
+  "prettier.prettierPath": "./node_modules/prettier",
+
+  "editor.formatOnSaveMode": "file"
 }
