--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.30.1",
     "lucide-react": "^0.563.0",
     "pixi.js": "^8.15.0",
     "react": "^19.2.0",
